tests/should_fail/match_struct_field_type_mismatch_bool.nv
module fail
struct Point { x: Int, y: Int }
// Bool literal in Int field — type mismatch
let p = Point(1, 2)
let r = match p {
    Point { x: true, y } => "bad",
    _ => "ok",
}
